# simple-ftp-client-server

./: CMakeLists.txt  README.md  compile.sh  installDependencies.sh  runClient.sh  runServer.sh
ClientApp/: CMakeLists.txt  Client.cpp  Client.h  ClientBuilder.cpp  ClientBuilder.h  main.cpp
Common/: CMakeLists.txt  CommandDefs.h  Error.h  GeneralFactory.cpp  GeneralFactory.h
FileProcessor/: BasicFileProcessor.cpp  BasicFileProcessor.h  CMakeLists.txt
Network/: BasicNetwork.cpp  BasicNetwork.h  CMakeLists.txt
ServerApp/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  Server.cpp  Server.h  ServerBuilder.cpp  ServerBuilder.h  ThreadController.cpp  ThreadController.h  main.cpp
UI/: CMakeLists.txt  CommandLineImpl.cpp  CommandLineImpl.h
